<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Alenasoft
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining
  ~ a copy of this software and associated documentation files (the "Software"),
  ~ to deal in the Software without restriction, including without limitation
  ~ the rights to use, copy, modify, merge, publish, distribute, sublicense,
  ~ and/or sell copies of the Software, and to permit persons to whom the Software
  ~ is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
  ~ EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
  ~ OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
  ~ IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
  ~ CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
  ~ TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE
  ~ OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".dependientes.RCIVAActivity"
    android:padding="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/total_incoming"
            android:id="@+id/textView"
            android:maxLines="1"
            android:layout_gravity="center_vertical|right" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText_totalIncoming"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:ellipsize="end"
            android:maxLength="8"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:stretchColumns="1"
        android:layout_margin="5dp"
        android:id="@+id/tableLayout_rcivaForm">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/social_security_discount"
                android:id="@+id/textView3"
                android:layout_marginLeft="5dp"
                android:paddingRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/textView_socialSecurityDiscount"
                android:layout_gravity="center|end|right"
                android:gravity="center_vertical|right" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="A"
                android:id="@+id/textView5"
                android:maxLines="1"
                android:textColor="#f73b0c" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/brute_incoming"
                android:id="@+id/textView6"
                android:layout_marginLeft="5dp"
                android:paddingRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/textView_bruteIncoming"
                android:layout_gravity="center|right"
                android:gravity="center_vertical|right" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="B"
                android:id="@+id/textView8"
                android:maxLines="1"
                android:textColor="#f73b0c" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/double_minimum_salary"
                android:id="@+id/textView9"
                android:layout_marginLeft="5dp"
                android:paddingRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/textView_twoMinimumSalary"
                android:layout_gravity="center|right"
                android:gravity="center_vertical|right" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="C"
                android:id="@+id/textView11"
                android:maxLines="1"
                android:textColor="#f73b0c" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/diff_ab"
                android:id="@+id/textView12"
                android:layout_marginLeft="5dp"
                android:paddingRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/textView_diffToDoubleMinimumSalary"
                android:layout_gravity="center|right"
                android:gravity="center_vertical|right" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="D"
                android:id="@+id/textView14"
                android:maxLines="1"
                android:textColor="#f73b0c" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/determined_tax"
                android:id="@+id/textView15"
                android:layout_marginLeft="5dp"
                android:paddingRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/textView_determinedTax"
                android:layout_gravity="center|right"
                android:gravity="center_vertical|right" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="E"
                android:id="@+id/textView17"
                android:maxLines="1"
                android:textColor="#f73b0c" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tax_double_minimum_salary"
                android:id="@+id/textView18"
                android:layout_marginLeft="5dp"
                android:paddingRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/textView_doubleMinimumTax"
                android:layout_gravity="center|right"
                android:gravity="center_vertical|right" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="F"
                android:id="@+id/textView20"
                android:maxLines="1"
                android:textColor="#f73b0c" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tax_to_pay"
                android:id="@+id/textView21"
                android:layout_marginLeft="5dp"
                android:paddingRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/textView_taxToBePayed"
                android:layout_gravity="center|right"
                android:gravity="center_vertical|right"
                android:textStyle="italic" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingRight="0dp"
            android:paddingLeft="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="G"
                android:id="@+id/textView23"
                android:maxLines="1"
                android:textColor="#f73b0c" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/mount_to_declare"
                android:id="@+id/textView24"
                android:layout_marginLeft="5dp"
                android:paddingRight="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="0"
                android:id="@+id/textView_minimumMountToDeclare"
                android:gravity="center_vertical|right"
                android:layout_gravity="center|right"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <View
        android:layout_height="2dip"
        android:background="#FF0000"
        android:layout_width="match_parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/legal_advice"
        android:id="@+id/textView2"
        android:textStyle="italic"
        android:textSize="12dp"
        android:layout_gravity="bottom" />

</LinearLayout>
